# interview

./: README.md
笔试/: 数据输入输出例题.md  牛客数据处理.md
笔试/leetcode周赛/: 第 254 场周赛.md
面试/: Cpp 后台服务器发展方向.md  面试经验汇总.md
面试/CPP语言相关/:  请你回答一下C++类内可以定义引用数据成员吗？.md  ++ 操作符.md  More Effective C++ .md  README.md  位域.md  位运算.md  内存对齐.md  函数调用栈帧.md  如何定义一个只能在堆上（栈上）生成对象的类？.md  宏.md  局部变量与全局变量.md  异常.md  引用.md  性能瓶颈.md  拷贝赋值.md  构造.md  析构.md  模版.md  类型转换.md  虚函数.md  链接装载库.md
面试/c++并发/: README.md  thread和future.md
面试/图形学/计算机图形学_GAMES/homework/HW1/代码框架/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
面试/图形学/计算机图形学_GAMES/homework/HW3/Assignment3/Code/: CMakeLists.txt  OBJ_Loader.h  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
面试/图形学/计算机图形学_GAMES/homework/HW3/Assignment3/Code/models/Crate/: Crate1.3ds  Crate1.blend  Crate1.mtl
面试/图形学/计算机图形学_GAMES/homework/HW3/Assignment3/Code/models/cube/: cube.mtl  wall.tif  wall1.tif
面试/场景题/: README.md  在圆内随机生成点.md  好友列表.md  排行.md  敏感词过滤.md  洗牌算法.md  海量数据.md  海量数据排序.md  视野范围内玩家.md
面试/操作系统/: CPU一致性协议MESI.md  GDB.md  README.md  windows消息机制知道吗，请说一说 参考回答：.md  主机字节序与网络字节序.md  五种IO模型.md  多线程.md  守护、僵尸、孤儿进程概念.md  文件系统.md  有名管道和无名管道的区别.md  用户态、内核态.md  目录.md  线程.md  虚拟地址空间.md  请介绍一下操作系统中的中断.md  请你来说一下微内核与宏内核.md  请你来说一说协程.md  请你说一说OS缺页置换算法.md  请你说一说操作系统中的结构体对齐，字节对齐.md  请你说一说操作系统中的页表寻址.md  请问如何修改文件最大句柄数？.md  请问虚拟内存和物理内存怎么对应.md  选择题.md  页面置换算法.md
面试/操作系统原始/:  虚拟内存.md  Linux 内核的同步方式.md  内核态与用户态的区别？从用户态切换到内核态有哪几种方式？.md  寄存器.md  异步.md  怎么理解线程安全.md  死锁.md  生产者，消费者模式.md  请你回答一下软链接和硬链接区别.md  (+12 more)
面试/项目/Muluo/Muduo_study/Chapter02/: CMakeLists.txt  Chapter02线程同步精要.md  Condition.h  CountDownLatch.h  Mutex.h  Singleton.h  test.cpp
面试/项目/RPC框架/序列化/Json/UTF-8和unicode/04_ans/: CMakeLists.txt  README.md  mujson.cpp  mujson.h  test.cpp
(+1303 files in other folders)
